--- a/templates/handlers/SealedEnglish/report.html
+++ b/templates/handlers/SealedEnglish/report.html
@@ -120,7 +120,7 @@ $(document).ready(function(){
     };
 
     $("a.start").on("click", function(){
-        send( {cmd: 'start'} );
+        sendCmd('start');
     });
 
 });
