--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/"><img src="/static/img/auction.png" style="width: 20px;"></a>
-      <a class="navbar-brand" href="/"><span>拍卖实验系统</span></a>
+      <a class="navbar-brand" href="/"><span>拍卖设计与实验系统</span></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
