--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -81,7 +81,7 @@ $(document).ready(function(){
                 for(var i=0; i < res.errors.length; i++){
                     var field = document.getElementsByName(res.errors[i].name)[0];
                     field.setCustomValidity(res.errors[i].reason);
-                    field.reportValidity();
+                    $("form button[type='submit']").click();
                 }
             }
             else{
