--- a/templates/handlers/SealedEnglish/intro.html
+++ b/templates/handlers/SealedEnglish/intro.html
@@ -15,7 +15,12 @@
 
 <div class="col-md-offset-1 col-md-10 intro">
     <div class="box effect7">
-        {% raw exp['exp_intro'] %}
+        <p>欢迎你参加实验！本次实验分为三个部分，在每个部分你都将和其他参与人面临一个拍卖场景，你需要独立提交报价，以扩大你的收益。</p>
+        <p>拍卖场景如下，你和其他竞拍者一起竞拍一片油田，油田中石油储量的市场价值为q，所有人都知道q服从一个给定分布，而且油田对每个人的价值是相同的。由于技术差异，每个竞拍者对这片的开采成本c都不一样，而且各竞拍者开采成本的确切值只有自己知道，但所有竞拍者都知道所有开采成本都服从同一个的分布。那么给定价值q和成本c，油田对你的估价即为q-c。本实验的三个部分都面临同样的这个场景，并且给定q服从[{{ settings['minQ'] }}, {{ settings['maxQ'] }}]的均匀分布，c服从({{ settings['minC'] }}, {{ settings['maxC'] }}]的均匀分布。注意，在实验中，价值q和每个人的成本c贯穿三个部分不变。</p>
+        <p>虽然拍卖场景类似，但各个部分拍卖规则并不相同。第一部分采用第二价格密封拍卖，即每个人分别提交一个密封报价，当所有人都提交了报价或者到达截止时间（3分钟），实验结束。如果实验结束时并未提交价格则视为放弃。本部分价高者获胜，胜者赢得物品并支付第二高报价。例如，物品价值为q，你的成本为c。如果你的报价是所有报价中的最高价，你将赢得该物品并支付所有报价中的第二高价（记为b），你在本部分的最终收益为估价减去支付价格，即(q-c)-b；但是如果你的报价并不是最高价，那么你的收益将为0。</p>
+        <p>第二部分采用英式升价公开拍卖，即竞拍者公开相互叫价，但每次出价都要比前一次的出价更高，所有人都能看到报价历史，当30秒时间内没有人再出更高的价或者到达截止时间（3分钟）时，实验结束。最后的报价人即为胜者，胜者赢得物品并支付其所报的价。例如，物品价值为q，你的成本为c。如果是你最后出价b，你将赢得该物品并支付你最后的报价b，你在本部分的最终收益为估价减去支付价格，即(q-c)-b；但是如果你不是最后一个出价的，那么你的收益将为0。</p>
+        <p>第三部分拍卖仍然采用与第二部分相同的英式公开拍卖形式，不同的是，前两个部分并不透露物品的价值q的确切值，只告诉你q的分布，而第三部分会告知q的确切值。</p>
+        <p>所有实验结束后，你将看到实验结果以及实际收益，而你在实验中的表现将直接决定你的实际收益。</p>
     </div>
 </div>
 
@@ -45,7 +50,7 @@ $(document).ready(function(){
     ws.handler.GroupReady = function(data, evt){
         disableForm();
         alert("是否准备好？");
-        send( {cmd:'ready'} );
+        sendCmd('ready');
     };
 
     ws.handler.Ready = function(data, evt){
@@ -65,7 +70,7 @@ $(document).ready(function(){
     $("form").submit( function(e){
         event.preventDefault();
         disableForm();
-        send({'cmd': 'register'});
+        sendCmd('register');
     });
 
     {% if substage == 'GroupReady'%}
