--- a/templates/handlers/SealedEnglish/train.html
+++ b/templates/handlers/SealedEnglish/train.html
@@ -13,32 +13,37 @@
 
     <div class="well">
         <p>训练旨在让您熟悉相应的操作和概念，与正式实验并不完全一致。训练时你的对手是一个智能agent，而正式实验时你将面对真实报价人。</p>
-        <p>本实验包含三个阶段，请在仔细阅读实验说明之后选择需要训练的阶段进行练习。</p>
+        <p>本实验包含三个部分，请在仔细阅读实验说明之后选择需要训练的部分进行练习。</p>
     </div>
 
     <div class="box effect7">
-        {% raw exp['exp_intro'] %}
+        <p>欢迎你参加实验！本次实验分为三个部分，在每个部分你都将和其他参与人面临一个拍卖场景，你需要独立提交报价，以扩大你的收益。</p>
+        <p>拍卖场景如下，你和其他竞拍者一起竞拍一片油田，油田中石油储量的市场价值为q，所有人都知道q服从一个给定分布，而且油田对每个人的价值是相同的。由于技术差异，每个竞拍者对这片的开采成本c都不一样，而且各竞拍者开采成本的确切值只有自己知道，但所有竞拍者都知道所有开采成本都服从同一个的分布。那么给定价值q和成本c，油田对你的估价即为q-c。本实验的三个部分都面临同样的这个场景，并且给定q服从[{{ settings['minQ'] }}, {{ settings['maxQ'] }}]的均匀分布，c服从({{ settings['minC'] }}, {{ settings['maxC'] }}]的均匀分布。注意，在实验中，价值q和每个人的成本c贯穿三个部分不变。</p>
+        <p>虽然拍卖场景类似，但各个部分拍卖规则并不相同。第一部分采用第二价格密封拍卖，即每个人分别提交一个密封报价，当所有人都提交了报价或者到达截止时间（3分钟），实验结束。如果实验结束时并未提交价格则视为放弃。本部分价高者获胜，胜者赢得物品并支付第二高报价。例如，物品价值为q，你的成本为c。如果你的报价是所有报价中的最高价，你将赢得该物品并支付所有报价中的第二高价（记为b），你在本部分的最终收益为估价减去支付价格，即(q-c)-b；但是如果你的报价并不是最高价，那么你的收益将为0。</p>
+        <p>第二部分采用英式升价公开拍卖，即竞拍者公开相互叫价，但每次出价都要比前一次的出价更高，所有人都能看到报价历史，当30秒时间内没有人再出更高的价或者到达截止时间（3分钟）时，实验结束。最后的报价人即为胜者，胜者赢得物品并支付其所报的价。例如，物品价值为q，你的成本为c。如果是你最后出价b，你将赢得该物品并支付你最后的报价b，你在本部分的最终收益为估价减去支付价格，即(q-c)-b；但是如果你不是最后一个出价的，那么你的收益将为0。</p>
+        <p>第三部分拍卖仍然采用与第二部分相同的英式公开拍卖形式，不同的是，前两个部分并不透露物品的价值q的确切值，只告诉你q的分布，而第三部分会告知q的确切值。</p>
+        <p>所有实验结束后，你将看到实验结果以及实际收益，而你在实验中的表现将直接决定你的实际收益。</p>
     </div>
 
     <div class="btn-group btn-group-lg" role="group">
-        <button type="button" class="btn btn-default sealed">第一阶段</button>
-        <button type="button" class="btn btn-default english">第二阶段</button>
-        <button type="button" class="btn btn-default englishopen">第三阶段</button>
+        <button type="button" class="btn btn-default sealed">第一部分</button>
+        <button type="button" class="btn btn-default english">第二部分</button>
+        <button type="button" class="btn btn-default englishopen">第三部分</button>
     </div>
 </div>
 
 <script type="text/javascript" language="javascript">
 
 $("button.sealed").on("click", function(){
-    send( {cmd:'get', data:'sealed'} );
+    sendCmd('get', 'sealed');
 });
 
 $("button.english").on("click", function(){
-    send( {cmd:'get', data:'english'} );
+    sendCmd('get', 'english');
 });
 
 $("button.englishopen").on("click", function(){
-    send( {cmd:'get', data:'englishopen'} );
+    sendCmd('get', 'englishopen');
 });
 
 </script>
