--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,7 @@
     {% block js %}
     <script type="text/javascript" language="javascript" src="/static/js/jquery-1.11.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/util.js"></script>
     {% end %}
 
 	<title>
